--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link href="css/main.css">
 </head>
 <body>
-    <h1>Hello World!</h1>
+    <h1>Brett Troucheau</h1>
+    <h2>Portfolio</h2>
+    <h3></h3>
 </body>
 </html>
