--- a/index.html
+++ b/index.html
@@ -1,15 +1,58 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl-be" dir="ltr" prefix="og: http://ogp.me/ns#">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <link href="css/main.css">
+    <title>Portfolio | Brett Troucheau</title>
+    <link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
     <h1>Brett Troucheau</h1>
     <h2>Portfolio</h2>
-    <h3></h3>
+    <div class="flexbox">
+        <div class="box_item one">
+            <img src="assets/images/brett.jpg">
+        </div>
+        <div class="box_item two">
+            <h3>Persoonlijke gegevens</h3>
+                <p>
+                Naam: Brett Troucheau<br>
+                Adres: Terheugenstraat 4, 1670 Bogaarden<br>
+                Gsm-nummer: 0471 48 82 60<br>
+                E-mail: Brett.troucheau@hotmail.com<br>
+                Geboortedatum: 03-10-1996<br>
+                Nationaliteit: Belg<br>
+                M/V: Man<br>
+                In het bezit van rijbewijs B    
+            </p>
+        </div>
+        <div class="box_item three">
+            <h3>Opleiding</h3>
+                <ul>
+                    <p>
+                        <li>09/2017 - heden: Grafische en Digitale Media<br>
+                        Arteveldehogeschool Gent<br></li>
+                        <br>
+                        <li>09/2014 - 08/2017: Bedrijfsmanagement - Marketing<br>
+                        Odisee Campus Brussel<br></li>
+                        <br>
+                        <li>09/2008 - 06/2014: Moderne Talen - Wetenschappen<br>
+                        SGI Lennik</li>
+                    </p>
+                </ul>
+        </div>
+        <div class="box_item four">
+            <h3>Hobby's</h3>
+                <ul>
+                    <p>
+                        <li>Lopen<br></li>
+                        <br>
+                        <li>Boksen<br></li>
+                        <br>
+                        <li>Zaalvoetbal<br></li>
+                    </p>
+                </ul>
+    </div>
 </body>
 </html>
